2014-05-05  Glenn Morris  <rgm@gnu.org>

	* autogen.sh: Check any pre-existing ACLOCAL_PATH.

2014-05-04  Paul Eggert  <eggert@cs.ucla.edu>

	Consult libpng-config more consistently (Bug#17339).
	This is mainly for simplicity, but it should also avoid
	some future problems like the ones we recently had with NetBSD.
	* configure.ac (LIBPNG): Configure after LIBZ.  Use libpng-config
	for cflags, too.  Append -lz if we're not already doing that with
	LIBZ.  Do not bother appending -lm, since we always append that.
	Coalesce some duplicate code.

	* autogen.sh: Use ‘"’ to quote a message that often contains ‘'’.

	Require ImageMagick >= 6.3.5, due to PixelSetMagickColor (Bug#17339).
	* configure.ac (IMAGEMAGICK_MODULE): Bump prereq from 6.2.8 to 6.3.5.
	A more-complicated fix would be to remove uses of PixelSetMagickColor,
	introduced in ImageMagick 6.3.5 (Sept. 2007).

2014-05-04  Glenn Morris  <rgm@gnu.org>

	* configure.ac (LIBPNG): Consult libpng-config for the precise
	form of "-lpng" to use.  (Bug#17339)

2014-05-03  Glenn Morris  <rgm@gnu.org>

	* autogen.sh: If all else fails, try using pkg-config to find pkg.m4.

2014-05-03  Paul Eggert  <eggert@cs.ucla.edu>

	Get --enable-gcc-warnings to work after touching configure.ac.
	Preserve ACLOCAL_PATH in later builds, so that by default it has
	the same value as it did in the first build after initial checkout.
	* Makefile.in (ACLOCAL_PATH): New macro.
	($(srcdir)/aclocal.m4): Use it.
	* configure.ac (ACLOCAL_PATH): AC_SUBST it.
	* autogen.sh (env_space): New var.
	Tell user what variables, if any, to pass to 'configure'.

	Get --enable-gcc-warnings working again.
	The recent changes to configure.ac removed the transliteration of
	-I to -isystem in CFLAGS, which is needed for --enable-gcc-warnings.
	Bring this back while keeping the spirit of the recent changes.
	* configure.ac (edit_cflags): Restore this shell var, and put it
	at the top level, where it'll be useful when emacs-24 is next merged.