@@ -1,3 +1,7 @@
+2014-05-07  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* image.c: Include <png.h> before <setjmp.h> (Bug#17429).
+
 2014-05-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* image.c: Do not use libpng if HAVE_NS, as NS does its own thing.
